[package]
name = "rieltor_parser"
version = "0.1.4"
edition = "2021"
authors = ["Shvachka Denys <d.shvachka@ukma.edu.ua>"]
license = "MIT"
description = "A parser for extracting detailed apartment information from the rieltor.ua website's HTML."
homepage = "https://github.com/denisinside/rieltor_parser"
repository = "https://github.com/denisinside/rieltor_parser"

[dependencies]
pest = "2.7.14"
pest_derive = "2.7.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1", features = ["derive"] }
chrono = "0.4.38"
futures = "0.3"